<resources>
    <string name="app_name">RaveAndroid</string>
    <string name="action_settings">Settings</string>


    <string name="grant_permission">Grant permission</string>
    <string name="permission_required_image">permission_required_image</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="account_number">Account number</string>
    <string name="bank">Bank</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="amount">Amount</string>
    <string name="pci_dss_compliant"><a href="https://www.pcisecuritystandards.org/pci_security/">PCI-DSS COMPLIANT</a></string>
    <string name="pin">PIN</string>
    <string name="cancel">CANCEL</string>
    <string name="enter">ENTER</string>
    <string name="choose_saved_card">CHOOSE SAVED CARD</string>
    <string name="pay">PAY</string>
    <string name="save_card">Save card</string>
    <string name="otp">OTP</string>
    <string name="enter_your_one_ntime_password_otp">Enter your one  time password (OTP)</string>
    <string name="card_number">Card Number</string>
    <string name="powered_by">by Flutterwave</string>
    <string name="please_enter_your_card_pin_nto_continue_your_transaction">Please enter your card pin  to continue your transaction.</string>
    <string name="otp_icon">otp icon</string>
    <string name="cvc_cvv2">CVC/CVV2</string>
    <string name="expiration">Valid Till (MM/YY)</string>
    <string name="email">Email</string>
    <string name="enter_your_billing_address_details">Enter your billing address details</string>
    <string name="billing_zip_code">Zip code e.g. 928302</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="bvn">BVN</string>
    <string name="use_a_new_card">Use another card</string>
    <string name="use_a_saved_card">Use a saved card</string>
    <string name="vodafone_msg">
        <![CDATA[
        <b>Please follow the instruction below to get your voucher code</b>
        <br>
        <br>
        <p>1. Dial <b>*110#</b> to generate your transaction voucher.</p>
        <p>2. Select <b>OPTION 4</b> "Make Payments".</p>
        <p>3. Select <b>OPTION 4</b> to generate the voucher.</p>
        <p>4. Enter your PIN in the next prompt.</p>
        <p>5. Input the voucher generated in the voucher field below.</p>]]>
    </string>

    <string name="mtn_validate_instructions">
       <![CDATA[
        <b>Please follow the instruction below to complete your MTN transaction</b>
        <br>
        <br>
        <p>1. Dial <b>*170#</b></p>
        <p>2. Choose option: <b>7) Wallet</b> </p>
        <p>3. Choose option: <b>3) My Approvals</b> </p>
        <p>4. Enter your MOMO pin to retrieve your pending approval list </p>
        <p>5. Choose a pending transaction </p>
        <p>6. Choose <b>option 1<b> to approve </p>
        <p>7. Wait while we verify your payment </p>
        ]]>
    </string>

    <string name="tigo_validate_instructions">
        <![CDATA[
        <b>Please follow the instruction below to complete your transaction</b>
        <br>
        <br>
        <p>1. Dial <b>*110#</b> to approve your transaction.</p>
        <p>2. Approve the transaction with your PIN.</p>
        ]]>
    </string>

    <string name="ugx_validate_instructions">@string/push_notification_message</string>
    <string name="rwf_validate_instructions">@string/push_notification_message </string>
    <string name="kes_validate_instructions">@string/push_notification_message</string>
    <string name="zmw_validate_instructions">@string/push_notification_message</string>

    <string name="push_notification_message">
        <![CDATA[
        <b>A push notification has been sent to your phone, please complete the transaction by entering your pin.</b>
        ]]></string>

    <string name="mtn">mtn</string>
    <string name="tigo">tigo</string>
    <string name="vodafone">vodafone</string>
    <string name="fieldAmount">amount</string>
    <string name="fieldPhone">phone</string>
    <string name="fieldEmail">email</string>
    <string name="fieldAccount">account</string>
    <string name="fieldVoucher">voucher</string>
    <string name="fieldNetwork">network</string>
    <string name="fieldBVN">bvn</string>
    <string name="fieldDOB">dateOfBirth</string>
    <string name="fieldBankCode">bankcode</string>
    <string name="fieldCvv">cvv</string>
    <string name="fieldCardExpiry">cardExpiry</string>
    <string name="fieldcardNoStripped">cardNoStripped</string>
    <string name="validAmountPrompt">Enter a valid amount</string>
    <string name="validPhonePrompt">Enter a valid number</string>
    <string name="validEmailPrompt">Enter a valid Email</string>
    <string name="isInternetBanking">bankcode</string>
    <string name="wait">Please wait...</string>
    <string name="cancelPayment">CANCEL PAYMENT</string>
    <string name="response">response</string>
    <string name="charge">You will be charged a total of </string>
    <string name="askToContinue">. Do you want to continue?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="noResponse">No response data was returned</string>
    <string name="transactionError">An error occurred while retrieving transaction fee</string>
    <string name="payWithBankAmountLimitPrompt">Bank payments made with this bank must be greater than 100 naira. Please select another bank or increase the amount you\'re paying and try again</string>
    <string name="success">success</string>
    <string name="invalidCharge">Invalid charge card response</string>
    <string name="cardNoStripped">cardNoStripped</string>
    <string name="validCvvPrompt">Enter a valid cvv</string>
    <string name="validExpiryDatePrompt">Enter a valid expiry date</string>
    <string name="validCreditCardPrompt">Enter a valid card number</string>
    <string name="validVoucherPrompt">Enter a valid voucher code</string>
    <string name="validNetworkPrompt">Select a network</string>
    <string name="unknownAuth">Unknown Auth Model</string>
    <string name="unknownResCode">Unknown charge response code</string>
    <string name="invalidChargeCode">Invalid charge response code</string>
    <string name="tokenNotFound">token not found</string>
    <string name="expired">expired</string>
    <string name="tokenExpired">Token expired</string>
    <string name="no_authurl_was_returnedmsg">No authUrl was returned</string>
    <string name="unknownAuthmsg">Unknown Auth Model</string>
    <string name="unknownResCodemsg">Unknown charge response code</string>
    <string name="checkStatus">Checking the status of your payment</string>
    <string name="defaultCardExpiry">12</string>
    <string name="ok">OK</string>

    <string name="back_to_app">Back to App</string>
    <string name="payment_failed">Payment failed</string>
    <string name="proceed">Proceed</string>
    <string name="transfer_received_successfully">Transfer received successfully</string>
    <string name="beneficiary_name_placeholder">Victor</string>
    <string name="i_have_made_the_transfer">I have made the transfer</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="bank_name_placeholder">Access Bank Plc</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_transfer_instructions_placeholder">Please make a bank transfer to</string>
    <string name="amount_placeholder">80,000</string>
    <string name="currency_placeholder">NGN</string>
    <string name="account_number_placeholder">0690000031</string>
    <string name="pay_with_bank_timeout_notification">Payments are currently slow at your bank. Slow payments are usually confirmed within 30 minutes. You will get a receipt once your payment is confirmed.</string>
    <string name="bant_transfer_polling_cancelled_message">You will get a receipt once your payment is confirmed.</string>

    <string name="uk_instruction">Please complete this transaction on your Mobile Banking App or Online Banking Platform using the following details</string>
    <string name="i_have_completed_this_payment">I have completed this payment  → </string>
    <string name="flutterwave_ukaccount">43271228</string>
    <string name="flutterwave_sortcode">04-00-53</string>
    <string name="barter_funnding">Barter Funding</string>

    <string name="reference_code">Reference Code</string>
    <string name="reference_code_placeholder">4990</string>
    <string name="ussd_instructions">Dial the code below to complete the payment</string>
    <string name="ussd_code_placeholder">*737*51*000#</string>
    <string name="verify_ussd_payment_button_text">I have completed the payment</string>
    <string name="choose_another_bank">CHOOSE ANOTHER BANK</string>
    <string name="click_here_to_copy_the_ussd_code">Click here to copy the ussd code</string>
    <string name="how_would_you_like_to_pay">How would you\nlike to pay?</string>
    <string name="you_are_currently_on_staging_mode">You are currently on staging mode</string>
    <string name="choose_another_payment_method">Choose another payment method</string>
    <string name="secured_by_flutterwave">SECURED BY FLUTTERWAVE</string>

    <string-array name="gh_mobile_money_networks">
        <item>Select network</item>
        <item>MTN</item>
        <item>Tigo</item>
        <item>Vodafone</item>
    </string-array>

    <string-array name="ussd_banks">
        <item>Select Bank</item>
        <item>Access Bank</item>
        <item>EcoBank</item>
        <item>Fidelity Bank</item>
        <item>First Bank of Nigeria</item>
        <item>First City Monument Bank</item>
        <item>Guaranty Trust Bank</item>
        <item>Heritage Bank</item>
        <item>Keystone Bank</item>
        <item>Stanbic IBTC Bank</item>
        <item>Sterling Bank PLC</item>
        <item>Union Bank</item>
        <item>United Bank for Africa</item>
        <item>Unity Bank PLC</item>
        <item>VFD Microfinance Bank</item>
        <item>Wema Bank</item>
        <item>Zenith bank PLC</item>
    </string-array>

    <string-array name="zm_mobile_money_networks">
        <item>Select network</item>
        <item>MTN</item>
        <item>AIRTEL</item>
        <item>ZAMTEL</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_select_a_card">Please select a card</string>
    <string name="barter_funding">Barter Funding</string>
    <string name="verifying_transaction">Verifying transaction...</string>
    <string name="formatted_expiry">0%1$s/</string>

</resources>
