<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="32dp"
	tools:context=".ussd.UssdFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/rave_initiate_payment_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:visibility="gone">


		<Button
			android:id="@+id/pay_button"
			style="?PayButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="64dp"
			android:text="@string/pay"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/banks_spinner" />

		<com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@null"
			android:id="@+id/rave_amountTil"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:visibility="gone"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<com.google.android.material.textfield.TextInputEditText
				android:paddingLeft="2dp"
				android:id="@+id/rave_amountEt"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/rave_card1"
				android:layout_marginBottom="10dp"
				android:hint="@string/amount"
				android:inputType="numberDecimal" />

		</com.google.android.material.textfield.TextInputLayout>

		<androidx.appcompat.widget.AppCompatSpinner
			android:id="@+id/banks_spinner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/rave_amountTil"
			tools:layout_height="20dp" />


	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/rave_validate_payment_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone"
		tools:visibility="visible">


		<Button
			android:id="@+id/verify_ussd_payment_button"
			style="?PayButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:text="@string/verify_ussd_payment_button_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/payment_status_Tv" />

		<LinearLayout
			android:id="@+id/reference_code_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:orientation="vertical"
			android:visibility="gone"
			app:layout_constraintTop_toBottomOf="@id/ussd_code_tv"
			tools:visibility="visible">
			<View
				android:id="@+id/divider1"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="#DCD4C9" />
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="12dp">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="start"
					android:layout_marginStart="8dp"
					android:layout_marginLeft="8dp"
					android:text="@string/reference_code"
					android:textSize="20sp" />
				<TextView
					android:id="@+id/reference_code_tv"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="8dp"
					android:layout_marginRight="8dp"
					android:layout_weight="1"
					android:gravity="end"
					android:text="@string/reference_code_placeholder"
					android:textSize="20sp" />
				<ImageView
					android:id="@+id/copy_reference_code_view"
					android:layout_width="18dp"
					android:layout_height="18dp"
					android:layout_gravity="center_vertical"
					android:contentDescription="Copy reference code"
					android:src="@drawable/ic_content_copy_black_24dp" />
			</LinearLayout>


			<View
				android:id="@+id/divider2"
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/raveSisal"
				app:layout_constraintTop_toBottomOf="@id/reference_code_layout" />
		</LinearLayout>


		<TextView
			android:id="@+id/textView3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="32dp"
			android:layout_marginEnd="16dp"
			android:text="@string/ussd_instructions"
			android:textColor="@color/raveBlack"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/copy_reference_code_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:text="@string/click_here_to_copy_the_ussd_code"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/reference_code_layout" />

		<TextView
			android:id="@+id/payment_status_Tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:visibility="invisible"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/copy_reference_code_tv" />


		<TextView
			android:id="@+id/ussd_code_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="48dp"
			android:text="@string/ussd_code_placeholder"
			android:textSize="36sp"
			android:textStyle="bold"

			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView3" />

		<TextView
			android:id="@+id/choose_another_bank_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:layout_marginBottom="32dp"
			android:text="@string/choose_another_bank"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/verify_ussd_payment_button"
			app:layout_constraintVertical_bias="1.0" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>